--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Belajar NodeJS RESTful API",
   "main": "src/main.js",
   "scripts": {
+    "start": "node src/main.js",
+    "build": "node --version",
+    "postinstall": "prisma generate",
     "test": "jest -i"
   },
   "jest": {
@@ -16,6 +19,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "@supabase/supabase-js": "^2.51.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
